# credit-risk-es

./: .env.example  README.md  convert_to_rules.py  main.py  prism_rules.py  pyproject.toml
__marimo__/session/: convert_to_rules.py.json  data_preprocessing.py.json
infant_wellness_es/rules/: bin_ranges.json  prism_object.pkl  rules.txt
rules/: rules.CLP
