[project]
name = "credit-risk-es"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "basedpyright>=1.32.1",
    "kagglehub>=0.3.13",
    "marimo>=0.17.2",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "python-lsp-server>=1.13.1",
    "seaborn>=0.13.2",
    "ty>=0.0.1a24",
]
